[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vogmidea"
description = "A Python library for local control of Midea (and associated brands) smart air conditioners. !! THIS IS A DEVELOPMENT PROJECT !! For the original, please refer to https://github.com/mill1000/midea-msmart"
readme = "README.md"
authors = [
  {name = "Stephen Davis", email = "sdavis@nativeit.net"},
]
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Home Automation"
]
dependencies = [
  "pycryptodome",
  "httpx"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/vogsphe-re/midea-msmart"
Issues = "https://github.com/vogsphe-re/midea-msmart/issues"

[project.scripts]
midea-discover = "vogmidea.cli:_legacy_main"
vogmidea = "vogmidea.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["vogmidea", "vogmidea.*"]
exclude = ["vogmidea.tests"]

[tool.setuptools_scm]
